--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
       })(window, document, "clarity", "script", "nmo9l7h799")
     </script>
 
+    <!-- Scripti google analitcs -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-06F018TTN4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+
+      gtag("config", "G-06F018TTN4")
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
