--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
         y.parentNode.insertBefore(t, y)
       })(window, document, "clarity", "script", "nmo9l7h799")
     </script>
-
+    <!-- Hotjar Tracking Code for https://hobbitis.github.io/projeto/ -->
+    <script>
+      ;(function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            ;(h.hj.q = h.hj.q || []).push(arguments)
+          }
+        h._hjSettings = { hjid: 5093451, hjsv: 6 }
+        a = o.getElementsByTagName("head")[0]
+        r = o.createElement("script")
+        r.async = 1
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
+        a.appendChild(r)
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=")
+    </script>
     <!-- Scripti google analitcs -->
     <!-- Google tag (gtag.js) -->
     <script
