--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a target="_blank" href="https://www.tiflux.com">Tiflux</a>
         </li>
         <li>
-          <a target="_blank" href="https://www.twitch.tv/hobbitis">Twitch</a>
+          <a target="_blank" href="">Twitch</a>
         </li>
         <li>
           <a href="#">Discord</a>
